--- a/contact.html
+++ b/contact.html
@@ -79,8 +79,8 @@
 
 
     <div class="contact">
-        <div class="container-contact reveave">
-            <div class="formulaire">
+        <div class="container-contact">
+            <div class="formulaire reveave">
                 <h2>Contactez-nous</h2>
                 <p>Pour toutes préoccupations, veuillez vous adresser au <br>secrétariat !</p>
                 <form action="">
@@ -94,7 +94,7 @@
                     <button>Envoyer</button>
                 </form>
             </div>
-            <div class="iframe-map">
+            <div class="iframe-map reveave">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.8615704814288!2d2.3327012142662777!3d6.4118259262315895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1024a9e2d1b64133%3A0x2815a4dbe510b9fd!2sUNICO!5e0!3m2!1sfr!2sbj!4v1656924993876!5m2!1sfr!2sbj"
                     width="100%" height="660" style="border:0;" allowfullscreen="" loading="lazy"
