--- a/contact.html
+++ b/contact.html
@@ -63,15 +63,15 @@
     </div>
 
     <div class="container-info reveave">
-        <div class="info">
+        <div class="info reveave">
             <i class="bi bi-map"></i>
             <h2>Abomey-calavi</h2>
         </div>
-        <div class="info">
+        <div class="info reveave">
             <i class="bi bi-phone-vibrate"></i>
             <h2>(+229) 64063564</h2>
         </div>
-        <div class="info">
+        <div class="info reveave">
             <i class="bi bi-envelope-paper"></i>
             <h2>contact@growtech</h2>
         </div>
